src/sass/components/profile-template.scss
.profile-template{
  .wrapper{
    padding:0 25px;
    .profile-img{
      width:95px;
      min-height:95px;
      border-radius: 50%;
      border: 2px solid #915C80;
      display:inline-block;
      background-color:#915C80;
    }
    p.icon-title{
      font-weight:300;
      color:#fff;
      font-size:2rem;
      margin-bottom:5px;
      margin-top:10px;
    }
    p.icon-text{
      color:#f3f3f3;
      opacity: .5;
      font-size:1.2rem;
      line-height: 1.6rem;
      margin-bottom:30px;
      margin-top:0;
    }
  }
}

